--- a/src/EasyExceptions/EasyExceptions.csproj
+++ b/src/EasyExceptions/EasyExceptions.csproj
@@ -4,9 +4,10 @@
     <TargetFramework>netstandard1.0</TargetFramework>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <RootNamespace>EasyExceptions</RootNamespace>
-    <Version>9999.0.0.0</Version>
-    <AssemblyVersion>$(Version)</AssemblyVersion>
-    <FileVersion>$(Version)</FileVersion>
+    <Version>9999.0.0</Version>
+    <BuildCounter>0</BuildCounter>
+    <AssemblyVersion>$(Version).${BuildCounter}</AssemblyVersion>
+    <FileVersion>$(Version).${BuildCounter}</FileVersion>
     <Description>Provides "string ExceptionDumpUtil.Dump(Exception)" method that recursively dumps all exception stack traces and properties into a string.</Description>
     <Authors>Alexey Kuptsov</Authors>
     <Copyright>Alexey Kuptsov</Copyright>
