--- a/src/EasyExceptions/EasyExceptions.csproj
+++ b/src/EasyExceptions/EasyExceptions.csproj
@@ -7,12 +7,12 @@
     <Version>9999.0.0</Version>
     <BuildCounter>0</BuildCounter>
     <AssemblyVersion>$(Version).$(BuildCounter)</AssemblyVersion>
-    <FileVersion>$(Version).${BuildCounter}</FileVersion>
+    <FileVersion>$(AssemblyVersion)</FileVersion>
     <Description>Provides "string ExceptionDumpUtil.Dump(Exception)" method that recursively dumps all exception stack traces and properties into a string.</Description>
     <Authors>Alexey Kuptsov</Authors>
     <Copyright>Alexey Kuptsov</Copyright>
     <Company>Alexey Kuptsov</Company>
-    <PackageLicenseUrl>https://github.com/alexeykuptsov/easy-exceptions/blob/master/LICENSE.txt</PackageLicenseUrl>
+    <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
     <PackageProjectUrl>https://github.com/alexeykuptsov/easy-exceptions</PackageProjectUrl>
     <PackageTags>dump exception string</PackageTags>
   </PropertyGroup>
@@ -29,6 +29,14 @@
 
   <ItemGroup>
     <Compile Include="..\AssemblyKey.cs" Link="AssemblyKey.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="..\..\LICENSE.txt" PackagePath="LICENSE.txt">
+      <Pack>true</Pack>
+      <Link>LICENSE.txt</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
