Change dumping complex properties to YAML serialization, set version 3.0.0

--- a/src/EasyExceptions/EasyExceptions.csproj
+++ b/src/EasyExceptions/EasyExceptions.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard1.0</TargetFramework>
+    <TargetFramework>netstandard1.3</TargetFramework>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <RootNamespace>EasyExceptions</RootNamespace>
     <Version>9999.0.0</Version>
@@ -37,6 +37,10 @@
       <Link>LICENSE.txt</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="YamlDotNet" Version="11.2.1" />
   </ItemGroup>
 
 </Project>
