--- a/src/EasyExceptions.Tests/EasyExceptions.Tests.csproj
+++ b/src/EasyExceptions.Tests/EasyExceptions.Tests.csproj
@@ -57,6 +57,8 @@
     <Compile Include="FallingException.cs" />
     <Compile Include="ListException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReferenceLoopObject.cs" />
+    <Compile Include="ReferenceLoopObjectException.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
