#3 Add a non-failing behavior for cases when an object property throws an unhandled exception

--- a/src/EasyExceptions.Tests/packages.config
+++ b/src/EasyExceptions.Tests/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AlexeyKuptsov.YamlDotNet" version="13.7.1" targetFramework="net48" />
   <package id="NUnit" version="3.6.1" targetFramework="net451" />
-  <package id="YamlDotNet" version="11.2.1" targetFramework="net48" />
 </packages>
