--- a/src/EasyExceptions.Tests/EasyExceptions.Tests.csproj
+++ b/src/EasyExceptions.Tests/EasyExceptions.Tests.csproj
@@ -44,9 +44,8 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="YamlDotNet, Version=11.0.0.0, Culture=neutral, PublicKeyToken=ec19458f3c15af5e">
-      <HintPath>..\packages\YamlDotNet.11.2.1\lib\net45\YamlDotNet.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="YamlDotNet, Version=0.0.0.0, Culture=neutral, PublicKeyToken=ec19458f3c15af5e, processorArchitecture=MSIL">
+      <HintPath>..\packages\AlexeyKuptsov.YamlDotNet.13.7.1\lib\net47\YamlDotNet.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -57,6 +56,7 @@
     <Compile Include="FallingException.cs" />
     <Compile Include="ListException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ThrowingPropertyException.cs" />
     <Compile Include="ReferenceLoopObject.cs" />
     <Compile Include="ReferenceLoopObjectException.cs" />
   </ItemGroup>
